--- a/SolarSystem/SolarSystem/src/main/AndroidManifest.xml
+++ b/SolarSystem/SolarSystem/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-sdk
         android:minSdkVersion="7"
         android:targetSdkVersion="16" />
-
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.SET_ORIENTATION"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
