--- a/SolarSystem/SolarSystem/build.gradle
+++ b/SolarSystem/SolarSystem/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 apply plugin: 'android'
 
 dependencies {
+    compile 'com.android.support:appcompat-v7:+'
     compile files('libs/android-support-v4.jar')
 }
 
