--- a/SolarSystem/SolarSystem/src/main/AndroidManifest.xml
+++ b/SolarSystem/SolarSystem/src/main/AndroidManifest.xml
@@ -7,8 +7,10 @@
     <uses-sdk
         android:minSdkVersion="7"
         android:targetSdkVersion="16" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.SET_ORIENTATION"/>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.SET_ORIENTATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -17,9 +19,16 @@
         <activity
             android:name="opengl.Zh0k.solarsystem.MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="opengl.Zh0k.solarsystem.MarsLander"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="opengl.Zh0k.solarsystem.login"
+            android:label="@string/title_activity_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
