--- a/SolarSystem/SolarSystem/src/main/AndroidManifest.xml
+++ b/SolarSystem/SolarSystem/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/navbarnavlogo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -26,7 +26,7 @@
         </activity>
         <activity
             android:name="opengl.Zh0k.solarsystem.login"
-            android:label="@string/title_activity_login" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
